--- a/Modules/FlowUIKit/Sources/FlowUIKit/UIKitView1.xib
+++ b/Modules/FlowUIKit/Sources/FlowUIKit/UIKitView1.xib
@@ -10,6 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="UIKitView1">
             <connections>
+                <outlet property="framework" destination="3ez-ju-G9u" id="6ac-ei-p24"/>
                 <outlet property="view" destination="Xkj-bM-RH9" id="pFV-Ie-mMx"/>
             </connections>
         </placeholder>
@@ -18,18 +19,29 @@
             <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ipu-z6-Obh">
-                    <rect key="frame" x="158" y="409" width="77" height="35"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ipu-z6-Obh">
+                    <rect key="frame" x="158" y="408.66666666666669" width="77" height="35"/>
                     <state key="normal" title="Button"/>
                     <buttonConfiguration key="configuration" style="plain" title="Page 2"/>
                     <connections>
                         <action selector="navigateToPage2:" destination="-1" eventType="touchUpInside" id="J5Q-fe-3p6"/>
                     </connections>
                 </button>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3ez-ju-G9u">
+                    <rect key="frame" x="196.66666666666666" y="463.66666666666669" width="0.0" height="0.0"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
             <viewLayoutGuide key="safeArea" id="H6H-B2-iyv"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <constraints>
+                <constraint firstItem="ipu-z6-Obh" firstAttribute="centerY" secondItem="Xkj-bM-RH9" secondAttribute="centerY" id="NQE-RD-acZ"/>
+                <constraint firstItem="3ez-ju-G9u" firstAttribute="top" secondItem="ipu-z6-Obh" secondAttribute="bottom" constant="20" id="R8s-os-Dti"/>
+                <constraint firstItem="ipu-z6-Obh" firstAttribute="centerX" secondItem="Xkj-bM-RH9" secondAttribute="centerX" id="VpH-F2-5vJ"/>
+                <constraint firstItem="3ez-ju-G9u" firstAttribute="centerX" secondItem="Xkj-bM-RH9" secondAttribute="centerX" id="X4q-He-cYJ"/>
+            </constraints>
             <point key="canvasLocation" x="10" y="20"/>
         </view>
     </objects>
